Error if package is not there

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,3 +35,4 @@ jobs:
           name: package
           path: build/plugin_video_ipfs.zip
           retention-days: 3
+          if-no-files-found: error
