--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       - run: poetry install
       - name: static code analysis
         run: |
-          poetry run black --check
+          poetry run black --check ipfs_video_kodi test
       - run: poetry run pytest
       - name: build package
         run: |
