--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ requests = "^2.26.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
-black = { version = "^21.12b0", allow-prereleases = true }
+black = "^22.3.0"
 mypy = "^0.930"
 
 [build-system]
